[package]
name = "st_test"
version = "0.1.0"
authors = ["Renat Mukhametzanov <mrkormick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "*"
actix-rt = "*"
actix-web = "*"
futures = "*"
#failure = "0.1.18"
#eval = "0.4.3"