[package]
name = "st_test"
version = "0.1.0"
authors = ["Renat Mukhametzanov <mrkormick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.0.2"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }